<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Hendrik Depauw
  ~ Copyright (c) 2017 Lorenz van Herwaarden
  ~ Copyright (c) 2017 Nick Aelterman
  ~ Copyright (c) 2017 Olivier Cammaert
  ~ Copyright (c) 2017 Maxim Deweirdt
  ~ Copyright (c) 2017 Gerwin Dox
  ~ Copyright (c) 2017 Simon Neuville
  ~ Copyright (c) 2017 Stiaan Uyttersprot
  ~
  ~ This software may be modified and distributed under the terms of the MIT license.  See the LICENSE file for details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_start"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_start"
        android:title="@string/navigation_text_start"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_routesettings"
        android:enabled="true"
        android:icon="@drawable/ic_distance"
        android:title="Route Settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_history"
        android:title="@string/navigation_text_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_profile"
        android:title="@string/navigation_text_settings"
        app:showAsAction="ifRoom" />
</menu>