...
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="16dp"
                />
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:background="#f0f0f4"
                android:textColor="#000"
...
                android:layout_marginRight="20dp"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_locker"
                />
            <Button
                android:id="@+id/sinin"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:elevation="1dp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
...
