...
    <!-- Intro Activity -->
    <string name="navigation_text_start">Start</string>
    <string name="navigation_text_history">History</string>
    <string name="navigation_text_settings">Profile</string>

    <!-- Start Fragment -->
    <string name="generate_route">Generate Route</string>
    <string name="free_running">No Route</string>
    <string name="location_inaccurate_title">Location inaccuracy</string>
    <string name="location_inaccurate_wait">Wait</string>
    <string name="location_inaccurate_continue">Continue</string>
    <string name="location_inaccurate_message">Your location hasn\'t been accurately defined yet. You need to be outdoors. Without a good accuracy your run might not be tracked very well. Do you want to wait for a better signal or continue?</string>
    <string name="internet_connection">No internet connection</string>
...
    <string name="average_distance">Average_distance</string>
    <string name="total_duration">Total duration</string>
    <string name="average_duration">Average duration</string>
    <string name="average_running_speed">Average running speed</string>
    <string name="number_of_runs">Number of runs</string>
    <string name="average_heart_rate">Average heart rate</string>
    <string name="logout">LOG OUT</string>

    <!-- Running Fragment -->
    <string name="generating_route">Generating Route…</string>
    <string name="generate_alternative">Generate Alternative</string>
    <string name="start_running">Start Running</string>
    <string name="pause_run">Pause</string>
...
